deploy: ce3830be6ca9b6cf02ee0f28a8edc3b3b80f6137

--- a/term1/Reflections 1 - Living with your own ideas/index.html
+++ b/term1/Reflections 1 - Living with your own ideas/index.html
@@ -366,7 +366,14 @@
 I turned my thyroid pills into a bracelet, so the act of taking care of myself becomes visible, beautiful, and part of my identity.
 By wearing what usually stays hidden in a drawer, I turn medication into decoration, treatment into culture.
 It’s a way of reclaiming control, fragility into fashion.</p>
-<p><a href="https://github.com/user-attachments/assets/76df3466-fd41-42f9-908b-07fe7cca5b99">https://github.com/user-attachments/assets/76df3466-fd41-42f9-908b-07fe7cca5b99</a></p>
+<iframe width="360" height="640"
+    src="https://www.youtube.com/embed/Kqcx9ubvq3g"
+    title="YouTube Short"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+</iframe>
+
 <p>The Thyroid Pill Grillz Prosthesis turns a symbol of style and showmanship into something personal and vital.
 Instead of precious gems, I placed my thyroid pills, what is luxury for others becomes necessity turned into strength for me.
 It’s a way to make something purely aesthetic become useful, and to give value to what is usually seen as fragility.
@@ -389,7 +396,7 @@ With these grillz, I can always carry my cure and style with me.
 <div class="md-source-date">
   <small>
     
-      Last update: <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date" title="November 9, 2025 23:34:15 UTC">November 9, 2025</span>
+      Last update: <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date" title="November 9, 2025 23:38:22 UTC">November 9, 2025</span>
     
   </small>
 </div>
