--- a/term1/Reflections 1 - Living with your own ideas/index.html
+++ b/term1/Reflections 1 - Living with your own ideas/index.html
@@ -366,6 +366,9 @@
 I turned my thyroid pills into a bracelet, so the act of taking care of myself becomes visible, beautiful, and part of my identity.
 By wearing what usually stays hidden in a drawer, I turn medication into decoration, treatment into culture.
 It’s a way of reclaiming control, fragility into fashion.</p>
+<p><img alt="03627e0d-fa03-4e12-b507-76ec65a41529" src="https://github.com/user-attachments/assets/eebc2648-a319-4726-a3f3-7c090c3f0ff5" />
+<img alt="feba2279-a9e2-4e0b-9291-fe49bbf6540f" src="https://github.com/user-attachments/assets/5779c254-3a02-4f30-b1a1-a2eb6fe242e3" />
+<img alt="ff33a04c-2434-4be2-805f-702ca01b680d" src="https://github.com/user-attachments/assets/0fa51b59-ddfd-46c6-bf14-f2cdee71d552" /></p>
 <iframe width="360" height="640"
     src="https://www.youtube.com/embed/Kqcx9ubvq3g"
     title="YouTube Short"
@@ -396,7 +399,7 @@ With these grillz, I can always carry my cure and style with me.</p>
 <div class="md-source-date">
   <small>
     
-      Last update: <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date" title="November 9, 2025 23:39:46 UTC">November 9, 2025</span>
+      Last update: <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date" title="November 9, 2025 23:55:01 UTC">November 9, 2025</span>
     
   </small>
 </div>
