deploy: b10e2fcfa737b21981226e77164067be05eb70ff

--- a/term1/Reflections 1 - Living with your own ideas/index.html
+++ b/term1/Reflections 1 - Living with your own ideas/index.html
@@ -416,7 +416,7 @@ It’s a way to turn a cultural skill into a prosthesis: not just eating, but le
 <p>12:30 p.m. — She’s kicking the little dog.</p>
 <p>12:33 p.m. — The dog is dead.</p>
 <p>12:40 p.m. — She’s trying to hide the body.
-She threw it into the plastic recycling bin — it should’ve gone in the organic waste, btw.</p>
+She threw it into the plastic recycling bin, it should’ve gone in the organic waste, btw.</p>
 <p>12:42 p.m. — She’s selling cocaine to a pregnant woman.</p>
 <p>12:52 p.m. — She met up with her classmates at a bar, pretending nothing happened, but I know what she did.</p>
 <p>12:53 p.m. — She’s sipping a coffee paid for with drug money.</p>
@@ -430,7 +430,7 @@ She threw it into the plastic recycling bin — it should’ve gone in the organ
 <div class="md-source-date">
   <small>
     
-      Last update: <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date" title="November 10, 2025 02:27:49 UTC">November 10, 2025</span>
+      Last update: <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date" title="November 10, 2025 02:28:26 UTC">November 10, 2025</span>
     
   </small>
 </div>
