--- a/term2/Extended Intelligences/index.html
+++ b/term2/Extended Intelligences/index.html
@@ -383,9 +383,10 @@
 <p>The prototype was developed using a Raspberry Pi, a PC with Arduino, a breadboard, and a self-built touch sensor. In the absence of a commercial sensor, a custom touch sensor was constructed using a thin copper sheet, exploiting its electrical conductivity to detect user input. The main challenges emerged during the programming phase and the integration between hardware components and AI agents.
 <img alt="33e06123-0065-421d-8ade-4ca32d411cc6" src="https://github.com/user-attachments/assets/d4053839-2ed0-43f6-ac65-17d9eac43514" />
 <img alt="9cca83d6-ad20-432c-b61c-38a9ffedf2c4" src="https://github.com/user-attachments/assets/eab062f7-5ab7-47a7-b7a5-48c334cb63f3" />
-<img alt="e1a930de-2020-481b-a1eb-6c2c29c9f48b" src="https://github.com/user-attachments/assets/80f4c0da-54b2-43a2-9af0-f6a618a17![0b6cc9df-235a-4af5-91fb-6de97affee82](https://github.com/user-attachments/assets/fdc46f9b-51f3-4807-9255-fdf60b81d857)
-91c" /><img alt="b56a52eb-9acf-4a9c-9a7b-8ea1fd7a12f7" src="https://github.com/user-attachments/assets/a6ab977b-b752-448e-aba3-78706c84f188" />
-<img alt="43ae0c56-549e-4c83-893f-13e07f73e350" src="https://github.com/user-attachments/assets/09490b59-8334-4b02-9f56-8cbb1293756b" /></p>
+<img alt="e1a930de-2020-481b-a1eb-6c2c29c9f48b" src="https://github.com/user-attachments/assets/75e312c7-b2d3-4571-8ba7-380b966081c8" />
+<img alt="0b6cc9df-235a-4af5-91fb-6de97affee82" src="https://github.com/user-attachments/assets/e9cbe7ac-de19-4460-9496-08f8f7382302" />
+<img alt="b56a52eb-9acf-4a9c-9a7b-8ea1fd7a12f7" src="https://github.com/user-attachments/assets/39065dfd-1646-4add-a748-044026d761cc" /></p>
+<p><img alt="43ae0c56-549e-4c83-893f-13e07f73e350" src="https://github.com/user-attachments/assets/09490b59-8334-4b02-9f56-8cbb1293756b" /></p>
 <p>Despite encountering several technical challenges and not fully achieving the expected results, the course proved to be a valuable learning experience. Unlike previous courses on artificial intelligence that were more focused on theoretical reflection, this hands-on approach allowed for a clearer understanding of the potential applications of AI within the design process.</p>
 <p>The most significant aspect was gaining insight into the functioning of AI agents and their integration with physical components such as sensors. This combination highlighted the potential of AI as an active element in the design of interactive systems, opening up new design directions.</p>
 <p>Overall, the course encouraged a shift in my usual design approach and strengthened my interest in using artificial intelligence as a tool for innovation, an area I intend to explore further.</p>
@@ -397,7 +398,7 @@
 <div class="md-source-date">
   <small>
     
-      Last update: <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date" title="February 10, 2026 16:09:54 UTC">February 10, 2026</span>
+      Last update: <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date" title="February 10, 2026 16:18:50 UTC">February 10, 2026</span>
     
   </small>
 </div>
